== 0.9.17 / August 10, 2008

* Made the main application window appear again after close